2010-07-15  Alex Nicolaou  <anicolao@chromium.org>

Reviewed by Dirk Schulze.

        https://bugs.webkit.org/show_bug.cgi?id=42228

        SVG Masks were in the wrong colour space for non-CG graphics layers,
        because for those cases ImageBuffer needs to be explicitly told to
        convert the pixels. This change adds a test that demonstrates the
        problem and the conversion call to make the mask LinearRGB.

        * platform/mac/svg/custom/mask-colorspace-expected.checksum: Added.
        * platform/mac/svg/custom/mask-colorspace-expected.png: Added.
        * platform/mac/svg/custom/mask-colorspace-expected.txt: Added.
        * svg/custom/mask-colorspace.svg: Added.
2010-07-15  Alex Nicolaou  <anicolao@chromium.org>

        Reviewed by Dirk Schulze.

        https://bugs.webkit.org/show_bug.cgi?id=42228

        SVG Masks were in the wrong colour space for non-CG graphics layers,
        because for those cases ImageBuffer needs to be explicitly told to
        convert the pixels. This change adds a test that demonstrates the
        problem and the conversion call to make the mask LinearRGB.

        Test: svg/custom/mask-colorspace.svg

        * rendering/RenderSVGResourceMasker.cpp:
        (WebCore::RenderSVGResourceMasker::createMaskImage):

Canonical link: https://commits.webkit.org/54298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63450 268f45cc-cd09-0410-ab3c-d52691b4dbfc