WebCore/rendering/RenderSVGResourceMasker.cpp
@@ -190,6 +190,10 @@ void RenderSVGResourceMasker::createMaskImage(MaskerData* maskerData, const SVGM
 
     maskImageContext->restore();
 
+#if !PLATFORM(CG)
+    maskerData->maskImage->transformColorSpace(DeviceRGB, LinearRGB);
+#endif
+
     // create the luminance mask
     RefPtr<ImageData> imageData(maskerData->maskImage->getUnmultipliedImageData(maskImageRect));
     CanvasPixelArray* srcPixelArray(imageData->data());
